# Evora

./: .claudeignore  .gitignore  README.md  arch-bridge.html  map.html  package-lock.json  package.json  vite.config.js
backend/: .env.example  import_bridges.py  pyproject.toml  rebuild_chroma.py  requirements.txt
backend/app/: auth.py  chroma.py  config.py  db.py  main.py  seed.py
backend/app/routers/: admin.py  bridges.py  chat.py  game.py  home.py  kg.py  knowledge.py  map.py  shop.py
backend/static/model/: luoyang.glb
backend/static/model/zhaozhou/: zhaozhou.gltf
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/data/: china-cities.json  china-full.json
frontend/src/api/: admin.js  bridges.js  chat.js  game.js  home.js  index.js  kg.js  knowledge.js  map.js  shop.js
frontend/src/components/: AiAssistant.vue  ArchBridgeStep.vue  MapView.vue  MortiseTenon.vue  OnThisDay.vue
frontend/src/layouts/: AdminLayout.vue  DefaultLayout.vue
frontend/src/pages/: AdminLoginPage.vue  AdminPage.vue  GamePage.vue  GraphPage.vue  HomePage.vue  KnowledgeSearch.vue  MapPage.vue  ModelPage.vue  ShopPage.vue  StructurePage.vue  test.vue
frontend/src/router/: index.js
frontend/src/utils/: asset.ts
nginx/: evora-backend.service  evora.conf
src/: App.vue  arch-bridge.js  map.js
src/components/: ArchBridgeForce.vue  MapView.vue
src/data/: bridgeData.json
src/pages/: MapPage.vue
